--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "game",
   "version": "1.0.0",
-  "description": "",
+  "description": "Game based on arcade game - Arkanoid / Brickbreaker rules and function",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "Zane Krūmiņa",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "body-parser": "^1.19.2",
+    "express": "^4.17.2",
+    "mysql2": "^2.3.3"
   }
 }
