--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "express": "^4.17.2",
-    "mysql2": "^2.3.3"
+    "sqlite3": "^5.0.2"
   }
 }
