--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "game",
   "version": "1.0.0",
   "description": "Game based on arcade game - Arkanoid / Brickbreaker rules and function",
-  "main": "server.js",
+  "main": "./server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./server/server.js"
   },
   "author": "Zane Krūmiņa",
   "license": "ISC",
