--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "express": "^4.17.2",
+    "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20",
     "sqlite3": "^5.0.2"
   }
 }
